actualizacion de iconos de contacto

--- a/biografi.html
+++ b/biografi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Referencia de la hoja de estilo de Css -->
-    <link rel="stylesheet" href="./css/reset.css" />
+    
     <link rel="stylesheet" href="./css/bio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -125,7 +125,7 @@
                   >Apartado en Alura Cursos
                 </a>
             </div>
-            <section class="skills" id="skills">
+            <section class="skills max-width-70" id="skills">
                 <h4 class="skills__title">Skills</h4>
                     <div class="skills__line">
                         <div class="skills__box animate">
