cambio de seccion contacto img clikeables y cambiamos animacion hover que no se veia bien

--- a/work.html
+++ b/work.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Referencia de la hoja de estilo de Css -->
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/bio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +13,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <!-- Fonte del Proyecto Raleway -->
 
     <title>Porfolio | Victor González</title>
 </head>
@@ -31,35 +29,35 @@
         <div class="top-bottom-margin animate">	
     
             <!-- Work -->
-            <a href="https://birvovk.github.io/Juego-del-Ahorcado/">
+            <a href="https://birvovk.github.io/Juego-del-Ahorcado/" target="_blank">
                 <div class="on-hover-40 hide-text-block work-block">
                     <h2 class="text-color-orange">Juego del Ahorcado</h2>
                     <p class="size-small text-color-white">Desarrollo Web <br>JavaScript, CSS, HTML</p>
                 </div>
             </a>
             <!-- Work -->
-            <a href="https://birvovk.github.io/Barberia-alura/">
+            <a href="https://birvovk.github.io/Barberia-alura/" target="_blank">
                 <div class="on-hover-40 hide-text-block work-block">
                     <h2 class="text-color-orange">Barberia</h2>
                     <p class="size-small text-color-white">Desarrollo Web <br>CSS, HTML</p>
                 </div>
             </a>	
             <!-- Work -->
-            <a href="https://birvovk.github.io/Tiro_al_Blanco/">
+            <a href="https://birvovk.github.io/Tiro_al_Blanco/" target="_blank">
                 <div class="on-hover-40 hide-text-block work-block">
                     <h2 class="text-color-orange">Tiro al Blanco</h2>
                     <p class="size-small text-color-white">Juego en JavaScript y CSS</p>
                 </div>
             </a>
             <!-- Work -->
-            <a href="https://birvovk.github.io/Lista-de-Bsuqueda-/">
+            <a href="https://birvovk.github.io/Lista-de-Bsuqueda-/" target="_blank">
                 <div class="on-hover-40 hide-text-block work-block">
                     <h2 class="text-color-orange">Lista de Pacientes</h2>
                     <p class="size-small text-color-white">JavaScript</p>
                 </div>
             </a>
             <!-- Work -->
-            <a href="https://birvovk.github.io/Layouts-Responsivos/">
+            <a href="https://birvovk.github.io/Layouts-Responsivos/" target="_blank">
                 <div class="on-hover-40 hide-text-block work-block">
                     <h2 class="text-color-orange">Layouts-Responsivos</h2>
                     <p class="size-small text-color-white">Proyecto en HTML y CSS</p>
