actualizacion de link de CV y correccion de color de links

--- a/biografi.html
+++ b/biografi.html
@@ -117,7 +117,7 @@
               educación y mucho más en el PDF adjunto a continuación:
             </p>
             <div class="links" data-aos="fade-up">
-              <a class="on-hover-40 text-color-orange" href="https://drive.google.com/file/d/15lAb3NzyXDo0EFn4YnI-VFHwY33gfNMX/view?usp=share_link" target="_blank"
+              <a class="on-hover-40 text-color-orange" href="/assets/Cv - Victor Gonzalez desarollador Actualizado 2-2023.pdf" target="_blank"
                 >Mi Curriculum Vitae
               </a>
               <div class="links" data-aos="fade-up">
